Fix gap when admin bar is visible

--- a/scss/base/_helpers.scss
+++ b/scss/base/_helpers.scss
@@ -1,13 +1,13 @@
 // Html
 
 html {
-	scroll-padding-top: calc(var(--header-height) + var(--wp-admin--admin-bar--height, 0px));
+	scroll-padding-top: calc(var(--header-height));
 }
 
 // Body
 
 body {
-	padding-top: calc(var(--header-height) + var(--wp-admin--admin-bar--height, 0px));
+	padding-top: calc(var(--header-height));
 
 	// Admin bar
 	&.admin-bar {
